--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,10 @@
 <body>
 
   <!-- javascript -->
-  <script src="lib/jquery/jquery.js"></script>
+  <script src="lib/jquery/dist/jquery.js"></script>
   <script src="lib/jquery-ui/ui/jquery-ui.custom.js"></script>
   <script src="lib/handlebars/handlebars.js"></script>
-  <script src="lib/ember/ember.js"></script>
+  <script src="lib/ember/ember.debug.js"></script>
   <script src="lib/d3/d3.js"></script>
   <script src="lib/lodash/lodash.js"></script>
   <script src="app.js"></script>
