--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for 'head'}}
 
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/dummy.css">
 
@@ -18,6 +19,7 @@
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>    
     <script src="assets/dummy.js"></script>
 
     {{content-for 'body-footer'}}
